<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:title="Main"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <Button
            android:id="@+id/car"
            android:layout_width="364dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="23dp"
            android:text="@string/car" />
        <Button
            android:id="@+id/Recipe"
            android:layout_width="364dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="157dp"
            android:layout_marginEnd="23dp"
            android:text="@string/Recipe" />
        <Button
            android:id="@+id/Foreign_currency"
            android:layout_width="364dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="290dp"
            android:layout_marginEnd="23dp"
            android:text="@string/Foreign_currency" />
        <Button
            android:id="@+id/News"
            android:layout_width="364dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="423dp"
            android:layout_marginEnd="23dp"
            android:text="@string/News" />
    </RelativeLayout>
</LinearLayout>